[project]
name = "ptd-marisa"
version = "0.1.0"
description = "Pipeline Project - Climate Visualisation"
readme = "README.md"
requires-python=">3.9"
dependencies = [
    "flask>=3.1.1",
    "mkdocs>=1.6.1",
    "psutil>=7.0.0",
    "pyflakes>=3.3.2",
    "pyside2>=5.15.2.1",
    "pyside6>=6.9.0",
    "pytest>=8.3.5",
    "qtpy>=2.4.3",
    "requests>=2.32.3",
    "tomlkit>=0.13.2",
]


[tool.pyside2-project]
files=["src/UI/main.py","src/UI/ui_window.ui"]

